<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_new_todo"
        android:title="@string/add_new_todo_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_todos"
        android:title="@string/delete_all_todos_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_completed_todos"
        android:title="@string/delete_all_completed_todos_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_todos_of_current_category"
        android:title="@string/delete_all_todos_of_current_category_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout_menu"
        app:showAsAction="never" />
</menu>