<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="8dp"
    android:paddingEnd="10dp"
    tools:context=".TodoFragment">

    <TextView
        android:id="@+id/fragment_todo_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_todo_tv_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fragment_todo_et_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/fragment_todo_tv_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/fragment_todo_tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fragment_todo_tv_description"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fragment_todo_et_description"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:autofillHints="no"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/fragment_todo_tv_description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/fragment_todo_tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_todo_tv_category"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/fragment_todo_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/fragment_todo_tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_todo_tv_target_date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fragment_todo_et_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/fragment_todo_tv_target_date"
        android:inputType="text"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/fragment_todo_tv_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_todo_tv_priority"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/fragment_todo_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/fragment_todo_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF4444"
            android:text="@string/fragment_todo_rb_high"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/fragment_todo_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="#C8824B"
            android:text="@string/fragment_todo_rb_medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/fragment_todo_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#55A636"
            android:text="@string/fragment_todo_rb_low"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/fragment_todo_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_todo_checkbox" />

    <Button
        android:id="@+id/fragment_todo_btn_add_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_todo_btn_add_todo" />

</LinearLayout>