<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/activity_login_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/activity_login_tv_login"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_login_et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/activity_login_et_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/activity_login_et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/activity_login_et_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/activity_login_btn_login" />

        <Button
            android:id="@+id/activity_login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/activity_register_tv_register" />
    </LinearLayout>

</LinearLayout>