<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryFragment">

    <TextView
        android:id="@+id/fragment_category_tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_category_tv_category"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fragment_category_et_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/fragment_category_et_category"
        android:inputType="text" />

    <Button
        android:id="@+id/fragment_category_btn_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/fragment_category_btn_add_category" />
</LinearLayout>